...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" name="YPBlack"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ImagegramCell"/>
                                        <connections>
                                            <outlet property="cellImage" destination="RuH-lv-VlP" id="88o-8c-iCE"/>
                                            <outlet property="dataLabel" destination="Vvf-hu-5Mx" id="UEb-Ol-9me"/>
                                            <outlet property="likeButton" destination="x2R-CA-742" id="Tck-IG-4w2"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="CdJ-vx-8NK"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1lJ-OS-zSi"/>
...
                                <connections>
                                    <outlet property="delegate" destination="nkn-qR-TnH" id="FER-9Q-fOW"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Rh-NV-Umu" userLabel="Back Button">
                                <rect key="frame" x="9" y="9" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="BMs-hH-3MF"/>
                                    <constraint firstAttribute="width" constant="24" id="Dh2-x0-exZ"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                                    <constraint firstAttribute="height" constant="60" id="rdz-gA-X2C"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JsO-ZD-bHV">
                                <rect key="frame" x="43.666666666666657" y="760" width="343" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="3Yw-gF-2ZT"/>
                                    <constraint firstAttribute="width" constant="343" id="aGq-ii-rgG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
